// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate a connection 1`] = `
Object {
  "connection": "// @flow

import { connectionDefinitions } from 'graphql-relay';

import ExampleType from '../type/ExampleType';

export default connectionDefinitions({
  name: 'Example',
  nodeType: ExampleType,
});
",
}
`;

exports[`generate a connection with schema 1`] = `
Object {
  "connection": "// @flow

import { connectionDefinitions } from 'graphql-relay';

import PostType from '../type/PostType';

export default connectionDefinitions({
  name: 'Post',
  nodeType: PostType,
});
",
}
`;
